examples/test/testpolicy9569.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9569
  namespace: namespace199
spec:
  podSelector:
    matchLabels:
      key11: value37
      key27: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value49
          key9: value44
      podSelector:
        matchLabels:
          key5: value8
          key33: value14
          key35: value1
